# marketplace-frontend

./: .babelrc  .dependency-cruiser.js  .dockerignore  .editorconfig  .env.develop  .env.e2e  .env.example  .env.staging  .env.test  .envrc  .eslintrc.js  .gitignore  .graphqlrc.yaml  .lintstagedrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  App.toml  Cargo.toml  Dockerfile  LICENSE.md  Makefile  Procfile  README.md  Rocket.toml  RustConfig  app.json  autodoc.config.json  backend.docker-compose.yml  build-and-push-docker-images.sh  build.rs  codecov.yml  codegen.ts  cypress.config.js  diesel.toml  docker-compose.yml  e2e.docker-compose.yml  frontend.docker-compose.yml  index.css  index.html  (+17 more)
api/: .env.example  Cargo.toml  Procfile  README.md  app.yaml
api/src/: app.yaml  config.rs  lib.rs  main.rs
api/src/application/: mod.rs
api/src/domain/: aggregate_root.rs  event_store.rs  mod.rs  project.rs  publishable.rs
api/src/graphql/: context.rs  mod.rs  mutation.rs
api/src/infrastructure/: event_store.rs  indexer.rs  mod.rs  new_indexer.rs
api/src/models/: crypto_usd_quotes.rs  ignored_contributions.rs  mod.rs  pending_project_leader_invitations.rs  sponsors.rs
api/src/presentation/: mod.rs
api/src/routes/: graphql.rs  mod.rs
api/tests/: budget_allocation_it.rs  create_project_it.rs  crypto_quotes_sync_it.rs  fetch_pull_request.rs  payment_it.rs  quote_sync_upon_budget_creation_it.rs  update_user_profile_it.rs
api/tests/context/: environment.rs  indexer.rs  mod.rs  new_indexer.rs  web3.rs
api/tests/fixtures/: job.rs  mod.rs
api/tests/models/: mod.rs  project_details.rs
backend/: Cargo.toml  RustConfig  codecov.yml  run-local-backend-ci.sh  rustfmt.toml
backend/api/: Cargo.toml  Procfile  README.md  app.yaml
backend/api/src/: config.rs  lib.rs  main.rs
backend/api/tests/: budget_allocation_it.rs  create_and_close_issue_it.rs  create_project_it.rs  fetch_issue.rs  fetch_pull_request.rs  fetch_user.rs  ignore_contributions_it.rs  payment_it.rs  sponsor_management_it.rs  update_user_payout_info_it.rs  update_user_profile_it.rs
backend/common/derive/: Cargo.toml
backend/common/domain/: Cargo.toml
backend/common/infrastructure/: Cargo.toml
backend/common/olog/: Cargo.toml
backend/common/presentation/: Cargo.toml
backend/common/testing/: Cargo.toml
backend/domain/: Cargo.toml
backend/domain/src/: event_store.rs
backend/dusty-bot/: Cargo.toml  Procfile  README.md  Rocket.toml  app.yaml
backend/dusty-bot/src/: config.rs  lib.rs  main.rs
backend/event-listeners/: Cargo.toml  Procfile  README.md  app.yaml
backend/event-listeners/src/: config.rs  lib.rs  main.rs
backend/event-listeners/tests/: github_indexing_it.rs  github_issues_projections_it.rs  github_pull_request_projections_it.rs  github_repos_projections_it.rs  on_demand_indexing_it.rs  quote_sync_upon_budget_creation_it.rs
backend/event-store/: Cargo.toml  Procfile  app.yaml
backend/event-store/src/: bus.rs  main.rs
backend/github-proxy/: Cargo.toml  Procfile  Rocket.toml  app.yaml
backend/github-proxy/src/: main.rs
backend/infrastructure/: Cargo.toml
backend/infrastructure/src/: lib.rs
backend/macros/: Cargo.toml
backend/migrations/2022-06-01-110904_create_projects/: up.sql
backend/migrations/2022-06-14-104536_create_contributions/: up.sql
backend/migrations/2022-07-19-145641_add_contribution_offchain_data/: down.sql
backend/migrations/2022-08-12-075340_create-contact-informations-table/: down.sql
backend/migrations/2022-08-19-142401_rename-contact-informations-table/: down.sql
backend/migrations/2022-08-22-135718_move-contributorid-to-0x-prefixed-format/: down.sql
backend/migrations/2022-08-30-141230_create-event-deduplication-table/: down.sql  up.sql
backend/migrations/2022-09-07-132255_create_project_members_table/: down.sql
backend/src/: lib.rs  main.rs
backend/testing/: README.md
common/infrastructure/: Cargo.toml
domain/: Cargo.toml  README.md
domain/src/: aggregate.rs  aggregate_root.rs  aggregate_root_repository.rs  entity.rs  event.rs  event_store.rs  lib.rs
event-listeners/: Cargo.toml  Procfile  README.md  Rocket.toml  app.yaml
event-listeners/src/: config.rs  lib.rs  logger.rs  main.rs
event-store/: Cargo.toml  app.yaml
event-store/src/: bus.rs  event.rs  lib.rs  main.rs
github-indexer/: Cargo.toml  Procfile  app.yaml
github-indexer/src/: config.rs  lib.rs  main.rs
github-indexer/tests/: github_indexing_it.rs  on_demand_indexing_it.rs
github-proxy/: Cargo.toml  app.yaml
github-proxy/src/: main.rs
infrastructure/: Cargo.toml  README.md
infrastructure/graphql/: query_find_user.graphql
infrastructure/src/: config.rs  event_bus.rs  event_store.rs  lib.rs
marketplace-core/: Cargo.toml  README.md
marketplace-core/src/: datadog_event_format.rs  lib.rs  main.rs  marketplace_tracing.rs
marketplace-domain/: Cargo.toml  README.md
marketplace-domain/src/: actions.rs  aggregate.rs  aggregate_root.rs  aggregate_root_repository.rs  errors.rs  event.rs  event_aggregate.rs  event_listener.rs  event_projection.rs  event_store.rs  lib.rs  projection.rs  projection_repository.rs  projector.rs
marketplace-event-store/: Cargo.toml
marketplace-event-store/src/: bus.rs  event.rs  event_bus.rs  lib.rs  main.rs
marketplace-indexer/: Cargo.toml  README.md  apibara.toml  build.rs  docker-compose.yml
marketplace-indexer/src/: lib.rs  main.rs
marketplace-infrastructure/: Cargo.toml  README.md
marketplace-infrastructure/src/: event_bus.rs  lib.rs
marketplace-signup/: Cargo.toml
marketplace-signup/src/: config.rs  init.rs  lib.rs
marketplace-tests/: Cargo.toml  README.md
marketplace-tests/src/: lib.rs
new-github-indexer/domain/: Cargo.toml
new-github-indexer/infrastructure/: Cargo.toml  diesel.toml
olog/: Cargo.toml
olog/src/: debug.rs  error.rs  info.rs  lib.rs  stdlog.rs  trace.rs  warn.rs
onlydust-domain/: Cargo.toml  README.md
onlydust-domain/src/: actions.rs  lib.rs  u256.rs
testing/: Cargo.toml  cypress.config.js  package.json
testing/src/: lib.rs
(+8239 files in other folders)
