[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
default-run = "api"
description = "Backend services to operate the contribution marketplace."
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
name = "api"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "1.0.0"

[dependencies]

# Async
async-trait = "0.1.56"
futures = {version = "0.3.21", features = ["alloc"]}
tokio = {version = "1.18.2", features = ["full"]}

# Database
diesel = {version = "1.4.8", default-features = false, features = [
  "postgres",
  "serde_json",
]}
uuid = {version = "0.8.2", default_features = false, features = [
  "v4",
  "serde",
]}

# Http client
reqwest = {version = "0.11", default-features = false}
url = "2.2.2"

# Http Server
juniper = {version = "0.15.10"}
juniper_rocket = {version = "0.8.2"}
okapi = {version = "0.7.0-rc.1"}
rocket = {version = "0.5.0-rc.2", features = ["json", "uuid"]}
rocket_okapi = {version = "0.8.0-rc.2", features = ["swagger", "uuid"]}
schemars = {version = "0.8", features = ["uuid1", "bigdecimal"]}

# Logs
log = "0.4.17"

# Tracing
tracing = "0.1"

# Errors
anyhow = "1.0.57"
thiserror = "1.0.31"

# Serde
serde = {version = "1.0.137", features = ["derive"]}
serde_json = {version = "1.0.81"}
serdect = {version = "0.1.0", features = ["alloc"]}

# Datetime
chrono = "0.4"

# Utils
derive_more = "0.99.17"
dotenv = "0.15.0"
rusty-money = {version = "0.4.1", features = ["iso", "crypto"]}
derive-new = "0.5.9"
derive-getters = "0.2.0"

# Local dependecies
domain = {path = "../domain"}
event-store = {path = "../event-store"}
infrastructure = {path = "../infrastructure"}

[dev-dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
lazy_static = "1.4.0"
rstest = "0.15.0"
serde_test = "1.0.140"
testing = {path = "../testing"}
mockall = "0.11.2"
