[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
categories = ["contribution", "health-check"]
default-run = "deathnote_contributions_feeder"
description = "Death Note off chain service to watch github contributions and update associated smart contract state on StarkNet."
edition = "2021"
homepage = "https://github.com/onlydustxyz/deathnote-contributions-feeder"
keywords = ["http", "rest", "api"]
license-file = "LICENSE"
name = "deathnote_contributions_feeder"
readme = "README.md"
repository = "https://github.com/onlydustxyz/deathnote-contributions-feeder"
version = "0.0.1"

[dependencies]

# Async
async-trait = "0.1.56"
futures = { version = "0.3.21", features = ["alloc"] }
tokio = { version = "1.18.2", features = ["full"] }

# Cache
stretto = { version = "0.5", features = ["async"] }

# Database
diesel = { version = "1.4.8", default-features = false, features = [
	"postgres",
	"serde_json",
	"uuidv07",
] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
uuid = { version = "0.8.2", default_features = false, features = [
	"v4",
	"serde",
] }

# Github
octocrab = "0.16.0"

# Http client
url = "2.2.2"
reqwest = "0.11.11"

# Http Server
http-api-problem = { version = "0.53.0", features = [
	"json-schema",
	"rocket",
	"rocket-okapi",
] }
okapi = { version = "0.7.0-rc.1" }
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "uuid"] }
schemars = { version = "0.8", features = ["uuid1", "bigdecimal"] }

# Starknet
starknet = { git = "https://github.com/ofux/starknet-rs" }

# Math types
base16ct = "0.1.1"
crypto-bigint = { version = "0.4.8", features = ["serde"] }

# Logs
env_logger = "0.9.0"
log = "0.4.17"
slog = "2.7.0"
slog-async = "2.7.0"
slog-envlogger = "2.2.0"
slog-json = "2.6.1"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.0"

# Errors
anyhow = "1.0.57"
thiserror = "1.0.31"

# Serde
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
serdect = { version = "0.1.0", features = ["alloc"] }

# Utils
dotenv = "0.15.0"
itertools = "0.10.3"
mapinto = "0.2.1"
rand = "0.8.5"

# Unit testing
mockall = "0.11.2"
rstest = "0.15.0"
assert-json-diff = "2.0.2"

# Local dependecies
wrappers = { path = "../wrappers" }

[dev-dependencies]
serde_test = "1.0.140"
assert_matches = "1.5"
