[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Domain objects and behaviours used in OnlyDust applictions."
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
name = "domain"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "0.0.1"

[dependencies]

# Async
async-trait = "0.1.56"
futures = {version = "0.3.21", features = ["alloc"]}

# Core types
url = "2.2.2"
uuid = {version = "0.8.2", default_features = false, features = [
  "v4",
  "serde",
]}

# Errors
anyhow = "1.0.57"
thiserror = "1.0.31"

# Log
log = "0.4.17"

# Serde
serde = {version = "1.0.137", features = ["derive"]}
serde_json = {version = "1.0.81"}

# Datetime
chrono = "0.4"

# Utils
derive-getters = "0.2.0"
derive_more = "0.99.17"

# Unit testing
mockall = "0.11.2"
mockall_double = "0.3.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
assert_matches = "1.5"
async-std = {version = "1.12.0", features = ["attributes"]}
rstest = "0.15.0"
serde_test = "1.0.140"
