[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Event store"
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
name = "event-store"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "0.0.1"

[features]
with_infrastructure_tests = []

[dependencies]
# Database
diesel = {version = "1.4.8", default-features = false, features = [
  "postgres",
  "serde_json",
]}

# RabbitMQ
lapin = "2.1.1"

# Async
async-trait = "0.1.56"
futures = {version = "0.3.21", features = ["alloc"]}
tokio = {version = "1.18.2", features = ["full"]}

# Logs
log = "0.4.17"

# Serde
serde = {version = "1.0.137", features = ["derive"]}
serde_json = {version = "1.0.81"}

# Datetime
chrono = "0.4"

# Utils
dotenv = "0.15.0"

# Errors
anyhow = "1.0.57"
thiserror = "1.0.31"

# Local dependecies
marketplace-domain = {path = "../marketplace-domain"}
marketplace-infrastructure = {path = "../marketplace-infrastructure"}

# TO REMOVE
uuid = {version = "0.8.2", default_features = false, features = [
  "v4",
  "serde",
]}

[dev-dependencies]
# Unit tests
async-std = {version = "1.12.0", features = ["attributes"]}
testing = {path = "../testing"}
rstest = "0.15.0"
