[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Event listeners"
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
name = "github-indexer"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "1.0.0"

[dependencies]

# Async
async-trait = "0.1.56"
futures = { version = "0.3.21", features = ["alloc"] }
tokio = { version = "1.18.2", features = ["full"] }

# Database
diesel = { version = "2.1.0", default-features = false, features = [
	"postgres",
	"extras",
	"serde_json",
] }
diesel_json = "0.2.0"
diesel-derive-newtype = "2.1.0"

# CLI
clap = { version = "4.1.4", features = ["derive"] }

# Core types
uuid = { version = "1.3.3", default_features = false, features = [
	"v4",
	"serde",
] }
rust_decimal = { version = "1.29.1", features = ["db-diesel2-postgres"] }

# Crypto
sha2 = "0.10.7"

# Http client
reqwest = { version = "0.11", default-features = false }
url = { version = "2.2.2", features = ["serde"] }

# Http Server
http-api-problem = { version = "0.56.0", features = ["rocket"] }
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }

# Tracing
tracing = "0.1"

# Errors
anyhow = "1.0.72"
thiserror = "1.0.43"

# Serde
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }

# Utils
derive-getters = "0.2.0"
derive_more = "0.99.17"
derive-new = "0.5.9"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10.5"

# Local dependecies
domain = { path = "../common/domain" }
infrastructure = { path = "../common/infrastructure" }
derive = { path = "../common/derive" }
olog = { path = "../common/olog" }
presentation = { path = "../common/presentation" }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
assert_matches = "1.5"
envtestkit = "1.1.2"
rstest = "0.15.0"
testing = { path = "../common/testing" }
rust_decimal_macros = "1.26"
mockall = "0.11.2"
mockall_double = "0.3.0"
testcontainers = "0.14.0"
tracing-subscriber = "0.3"
