[package]
name = "marketplace-core"
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Backend services to operate the contribution marketplace."
homepage = "https://onlydust.xyz"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "0.0.1"
default-run = "marketplace-core"

[features]
with_component_tests = []

[dependencies]

# Async
async-trait = "0.1.56"
futures = { version = "0.3.21", features = ["alloc"] }
tokio = { version = "1.18.2", features = ["full"] }

# Database
uuid = { version = "0.8.2", default_features = false, features = [
	"v4",
	"serde",
] }

# Github
octocrab = "0.16.0"

# Http client
url = "2.2.2"

# Http Server
http-api-problem = { version = "0.53.0", features = [
	"json-schema",
	"rocket",
	"rocket-okapi",
] }
okapi = { version = "0.7.0-rc.1" }
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "uuid"] }
schemars = { version = "0.8", features = ["uuid1", "bigdecimal"] }

# Starknet
starknet = { git = "https://github.com/ofux/starknet-rs" }

# Math types
crypto-bigint = { version = "0.4.8", features = ["serde"] }

# Logs
env_logger = "0.9.0"
log = "0.4.17"
slog = "2.7.0"
slog-async = "2.7.0"
slog-envlogger = "2.2.0"
slog-json = "2.6.1"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.0"

# Errors
anyhow = "1.0.57"
thiserror = "1.0.31"

# Serde
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
serdect = { version = "0.1.0", features = ["alloc"] }

# Datetime
chrono = "0.4"

# Utils
dotenv = "0.15.0"
itertools = "0.10.3"
mapinto = "0.2.1"

# Unit testing
mockall = "0.11.2"

# Local dependecies
marketplace-wrappers = { path = "../marketplace-wrappers" }
marketplace-domain = { path = "../marketplace-domain" }
marketplace-infrastructure = { path = "../marketplace-infrastructure" }

[dev-dependencies]
serde_test = "1.0.140"
async-std = {version = "1.12.0", features = ["attributes"]}
rstest = "0.15.0"
