[package]
name = "marketplace-domain"
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Domain objects and behaviours used in OnlyDust applictions."
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "0.0.1"

[dependencies]

# Async
async-trait = "0.1.56"
futures = { version = "0.3.21", features = ["alloc"] }

# Core types
uuid = { version = "0.8.2", default_features = false, features = [
	"v4",
	"serde",
] }
crypto-bigint = { version = "0.4.8", features = ["serde"] }
url = "2.2.2"

# Utils
mapinto = "0.2.1"
hex = "0.4.3"

# Errors
thiserror = "1.0.31"

# Serde
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }

# Unit testing
mockall = "0.11.2"

# Local dependecies
marketplace-wrappers = { path = "../marketplace-wrappers" }

[dev-dependencies]
rstest = "0.15.0"
serde_test = "1.0.140"
assert-json-diff = "2.0.2"
async-std = { version = "1.12.0", features = ["attributes"] }
