[package]
name = "marketplace-indexer"
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Marketplace on-chain event indexing."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://onlydust.xyz"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"

[dependencies]
# Async
tokio = { version = "1.18.2", features = ["full"] }
async-trait = "0.1.56"
futures = { version = "0.3.21", features = ["alloc"] }
tokio-stream = "0.1.9"

# Serde
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

# Web client
tonic = "0.7.2"

# Utils
dotenv = "0.15.0"
itertools = "0.10.3"
mapinto = "0.2.1"
thiserror = "1.0.31"
anyhow = "1.0.57"

# Starknet
starknet = { git = "https://github.com/ofux/starknet-rs" }
crypto-bigint = { version = "0.4.8", features = ["serde"] }

# Protocol Buffers
prost = "0.10.4"
prost-types = "0.10.1"

# Logs
log = "0.4.17"
slog = "2.7.0"
slog-async = "2.7.0"
slog-envlogger = "2.2.0"
slog-json = "2.6.1"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.0"

# Unit tests
mockall = "0.11.2"

# Local dependecies
marketplace-domain = { path = "../marketplace-domain" }
marketplace-infrastructure = { path = "../marketplace-infrastructure" }

[dev-dependencies]
# Unit tests
rstest = "0.15.0"
async-std = {version = "1.12.0", features = ["attributes"]}

[build-dependencies]
tonic-build = "0.7.2"
