[package]
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Marketplace on-chain event indexing."
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
name = "marketplace-indexer"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "1.0.0"

[features]
default = ["starknet"]
starknet = []

[dependencies]
# Async
async-trait = "0.1.56"
futures = { version = "0.3.21", features = ["alloc"] }
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = "0.1.9"

# Database
diesel = { version = "1.4.8", default-features = false, features = [
	"postgres",
	"serde_json",
] }

# Serde
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

# Web client
reqwest = { version = "0.11", default-features = false }
tonic = { version = "0.7.2", features = ["tls", "tls-roots"] }

# Datetime
chrono = "0.4"

# Utils
anyhow = "1.0.57"
dotenv = "0.15.0"
itertools = "0.10.3"
mapinto = "0.2.1"
thiserror = "1.0.31"

# Starknet
crypto-bigint = { version = "0.4.8", features = ["serde"] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }

# Protocol Buffers
prost = "0.10.4"
prost-types = "0.10.1"

# Logs
log = "0.4.17"
slog-scope = "4.4.0"

# Unit tests
mockall = "0.11.2"

# Local dependecies
marketplace-domain = { path = "../marketplace-domain" }
marketplace-infrastructure = { path = "../marketplace-infrastructure" }

[dev-dependencies]
# Unit tests
assert_matches = "1.5.0"
async-std = { version = "1.12.0", features = ["attributes"] }
envtestkit = "1.1.2"
rstest = "0.15.0"

[build-dependencies]
tonic-build = "0.7.2"
