[package]
name = "marketplace-signup"
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Marketplace signup"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://onlydust.xyz"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"

[dependencies]

# Async
async-trait = "0.1.56"
futures = { version = "0.3.21", features = ["alloc"] }
tokio = { version = "1.18.2", features = ["full"] }

# Http Server
http-api-problem = { version = "0.53.0", features = [
	"json-schema",
	"rocket",
	"rocket-okapi",
] }
okapi = { version = "0.7.0-rc.1" }
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "uuid"] }
schemars = { version = "0.8", features = ["uuid1", "bigdecimal"] }

reqwest = { version = "0.11", features = ["json"] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "23d1747c4aea084cc3726707edb11007b37e8433" }
thiserror = "1.0.31"

# Serde
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
serde_with = "1.14.0"
serdect = { version = "0.1.0", features = ["alloc"] }

# Logs
env_logger = "0.9.0"
log = "0.4.17"
slog = "2.7.0"

[dev-dependencies]
serde_test = "1.0.140"
async-std = { version = "1.12.0", features = ["attributes"] }
rstest = "0.15.0"
mockall = "0.11.2"
wiremock = "0.5"
claim = "0.5"
