[package]
name = "olog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Tracing
opentelemetry = {version = "0.18.0", features = ["rt-tokio"]}
tracing = "0.1"
tracing-log = {version = "0.1"}
tracing-opentelemetry = "0.18.0"
log = "0.4.17"
lazy_static = "1.4.0"

[dev-dependencies]
ctor = "0.1.26"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "json"]}
