[package]
name = "onlydust-domain"
authors = ["OnlyDust <tech@onlydust.xyz>"]
description = "Domain objects and behaviours used in OnlyDust applictions."
edition = "2021"
homepage = "https://onlydust.xyz"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/onlydustxyz/marketplace-backend"
version = "0.0.1"

[dependencies]

# Async
async-trait = "0.1.56"

# Core types
uuid = { version = "0.8.2", default_features = false, features = [
	"v4",
	"serde",
] }
crypto-bigint = { version = "0.4.8", features = ["serde"] }
url = "2.2.2"
base16ct = "0.1.1"
# TODO: Remove both dependencies below once https://www.notion.so/onlydust/remove-dependency-on-schema-rs-in-domain-crate-584da1e29638490986f2e28e3988709f has been done
schemars = { version = "0.8", features = ["uuid1"] }
# rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "uuid"] }

# Utils
mapinto = "0.2.1"

# Starknet
starknet = { git = "https://github.com/ofux/starknet-rs" }

# Errors
thiserror = "1.0.31"

# Serde
serde = { version = "1.0.137", features = ["derive"] }

# Unit testing
mockall = "0.11.2"

# Local dependecies
wrappers = { path = "../wrappers" }

[dev-dependencies]
rstest = "0.15.0"
